--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -129,8 +129,8 @@ TODO: add template variable details.
 
                 </div>
 
-                {% if isLoggedIn %}
-                    <div class="text-right mt-2 text-xs pr-1">
+                  {% if isLoggedIn %}
+                    <div class="text-right mt-2 text-xs pr-1 mb-8">
                         <a class='text-{{ themeColour }}-800' href='#top'>{{ __('Return to top') }}</a>
                     </div>
                 {% endif %}
@@ -139,14 +139,9 @@ TODO: add template variable details.
                 {% endblock afterPage %}
             </div>
 
-            
-
             {% block footer %}
-                <div class="relative text-sm text-gray-700 px-6 lg:px-12 mt-4 pt-2 pb-6 leading-normal border-t border-gray-300 {{ rightToLeft ? 'text-right' : 'text-left' }}">
-                    {{ include('footer.twig.html') }}
-
-                    <img class="absolute top-0 -mt-1 hidden sm:block w-32 {{ rightToLeft ? 'left-0 sm:ml-0 md:ml-16' : 'right-0 sm:mr-0 md:mr-16' }}" alt="Logo text-xs" src="{{ absoluteURL }}/themes/{{ gibbonThemeName|default("Default") }}/img/gibbon-white.svg"/>
-                </div>
+                {# Remove the old footer wrapper and styling #}
+                {{ include('footer.twig.html') }}
             {% endblock %}
 
         </div>
