Modified index.twig.html to support new theme.

--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -17,41 +17,44 @@ TODO: add template variable details.
         {{ include('head.twig.html') }}
         {% endblock head %}
     </head>
+
     <body x-data="{ modalOpen: false, modalType: 'none', globalShowHide: false }"
         class="h-full flex flex-col font-sans {{ bodyBackground  ? '' : 'body-gradient-' ~ themeColour|lower }}" style="{{ bodyBackground  ? bodyBackground : '' }} {{ themeColour is empty ? 'background: linear-gradient(to left top, #402568 2%, #935ee1 65%, #a871ec) no-repeat fixed' : '' }}">
         <a id="top"></a>
         {% set sidebarPos = isLoggedIn ? 'left' : 'right' %}
+        
+        <header id="main-header" class="bg-white/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-40 border-b border-grey-400">
 
-        <div class="px-4 sm:px-6 lg:px-12 pb-24">
+        <div class="px-4 sm:px-6 lg:px-12 pb-2 pt-2">
 
             {% block header %}
                 <div id="header" class="relative flex justify-between items-center">
 
                     <a id="header-logo" class="block my-4 max-w-xs sm:max-w-full leading-none" href="{{ absoluteURL }}">
-                        <img class="block max-w-full {{ isLoggedIn ? 'h-12' : 'h-20 mt-4 mb-4' }}" alt="{{ organisationName }} Logo" src="{{ absoluteURL }}/{{ organisationLogo|default("themes/Default/img/logo.png")|trim('/', 'left') }}" style="max-height:100px;" />
+                        <img class="block max-w-full {{ isLoggedIn ? 'h-16' : 'h-20 mt-4 mb-4' }}" alt="{{ organisationName }} Logo" src="{{ absoluteURL }}/{{ organisationLogo|default("themes/Default/img/logo.png")|trim('/', 'left') }}" style="max-height:100px;" />
                     </a>
 
                     <div class="flex-grow flex items-center justify-end text-right text-sm text-{{ themeColour }}-200">
                         {% if isLoggedIn and currentUser %}
 
-                        <a href="{{ currentUser.url ?? './index.php?q=/preferences.php' }}" class="hidden sm:block text-{{ themeColour }}-200 hover:text-white">
+                        <a href="{{ currentUser.url ?? './index.php?q=/preferences.php' }}" class="hidden sm:block hidden md:inline font-semibold text-gray-700 ">
                             {{ currentUser.name }}
                         </a>
 
-                        <div class="relative px-4 py-4 {{ rightToLeft ? '-ml-3' : '-mr-3' }}" x-data="{menuOpen: false}" @mouseleave="menuOpen = false" @click.outside="menuOpen = false">
+                        <div class="relative px-4 py-1 {{ rightToLeft ? '-ml-3' : '-mr-3' }}" x-data="{menuOpen: false }" @mouseleave="menuOpen = false" @click.outside="menuOpen = false">
 
                             <a @mouseenter="menuOpen = true" @click="menuOpen = !menuOpen" :class="{'ring-opacity-75': menuOpen, 'ring-opacity-25': !menuOpen}" hx-boost="true" hx-target="#content-wrap" hx-select="#content-wrap" hx-swap="outerHTML show:no-scroll swap:0s" href="{{ currentUser.url ?? '#' }}" class="{{ currentUser.image_240 ? 'flex-none' : 'flex items-center justify-center' }} block overflow-hidden w-10 h-10 rounded-full bg-gray-200 ring-white ring-2 cursor-pointer">
                             {% if currentUser.image_240 %}
                                 <img class="w-full -mt-1" src="{{ absoluteURL }}/{{ currentUser.image_240 }}" />
                             {% else %}
-                                <img class="w-full" src="{{ absoluteURL }}/themes/{{ gibbonThemeName }}/img/anonymous_75.jpg" />
+                                <img class="w-full" src="https://placehold.co/30x30/2563EB/FFFFFF?text={{ currentUser.name |split(' ')|first|slice(0,1) }}" />
                             {% endif %}
                             </a>
 
-                            <ul x-cloak x-show="menuOpen" x-transition:enter.duration.250ms x-transition:leave.duration.100ms class="list-none m-0 bg-black bg-opacity-75 backdrop-blur-lg backdrop-contrast-125 backdrop-saturate-150 absolute rounded-md w-48 mt-1 p-1 sm:p-1.5 z-50 cursor-pointer {{ rightToLeft ? 'left-0' : 'right-0' }}">
+                            <ul x-cloak x-show="menuOpen" x-transition:enter.duration.250ms x-transition:leave.duration.100ms class="list-none m-0 rounded-lg shadow-xl border border-gray-200 font-medium text-gray-700 group-hover:text-blue-700 bg-opacity-75 backdrop-blur-lg backdrop-contrast-125 backdrop-saturate-150 absolute rounded-md w-48 mt-1 p-1 sm:p-1.5 z-50 cursor-pointer {{ rightToLeft ? 'left-0' : 'right-0' }}">
                                 {% for link in minorLinks|reverse %}
-                                <li class="hover:bg-{{ themeColour }}-700 rounded">
-                                    <a @click="menuOpen = false" href="{{ link.url }}" class="flex justify-between items-center text-sm text-white focus:text-{{ themeColour }}-200 no-underline px-1 py-2 md:py-1 leading-normal {{ rightToLeft ? 'text-right' : 'text-left' }}" target="{{ link.target }}" {{ link.target == '_blank' ? 'rel="noopener noreferrer"' : '' }}>
+                                <li class="block px-4 py-2 text-gray-700 hover:bg-gray-100 rounded">
+                                    <a @click="menuOpen = false" href="{{ link.url }}" class="flex justify-between items-center text-sm text-black focus:text-{{ themeColour }}-200 no-underline px-1 py-2 md:py-1 leading-normal {{ rightToLeft ? 'text-right' : 'text-left' }}" target="{{ link.target }}" {{ link.target == '_blank' ? 'rel="noopener noreferrer"' : '' }}>
                                         {{- link.name|raw -}}
 
                                         {% if link.target == '_blank' %}
@@ -66,7 +69,7 @@ TODO: add template variable details.
                         {% else %}
                             {% for link in minorLinks %}
                                 {{ link.prepend }}&nbsp;
-                                <a href="{{ link.url }}" class="text-white {{ loop.count > 3 ? 'hidden sm:block' }}" target="{{ link.target }}" {{ link.target == '_blank' ? 'rel="noopener noreferrer"' : '' }}>
+                                <a href="{{ link.url }}" class="text-black {{ loop.count > 3 ? 'hidden sm:block' }}" target="{{ link.target }}" {{ link.target == '_blank' ? 'rel="noopener noreferrer"' : '' }}>
                                     {{- link.name|raw -}}
                                 </a>
                                 {{ link.append }}
@@ -87,6 +90,8 @@ TODO: add template variable details.
 
             {% endblock %}
         </div>
+        </header>
+
         <div id="wrapOuter" class="flex-1 pt-24 bg-transparent-100">
             <div id="wrap" class="px-0 sm:px-6 lg:px-12 -mt-48">
                 {% block beforePage %}
@@ -118,7 +123,7 @@ TODO: add template variable details.
                         <div id="content-inner" class="h-full">
 
                             {% block page %}
-
+                                
                                 {{ include('page.twig.html') }}
 
                                 {{ content|join("\n")|raw }}
@@ -128,13 +133,14 @@ TODO: add template variable details.
                     </div>
 
                 </div>
+                
 
                   {% if isLoggedIn %}
                     <div class="text-right mt-2 text-xs pr-1 mb-8">
                         <a class='text-{{ themeColour }}-800' href='#top'>{{ __('Return to top') }}</a>
                     </div>
                 {% endif %}
-
+                 
                 {% block afterPage %}
                 {% endblock afterPage %}
             </div>
