--- a/templates/tray.twig.html
+++ b/templates/tray.twig.html
@@ -12,12 +12,12 @@ Main Menu: Displays the top-level categories and active modules.
 
 {% if statusTray.messageWall %}
 
-    <a id="messageWall" x-data="{ read: {{ currentUser.messengerRead ? 'true' : 'false' }} }" hx-boost="true" hx-target="#content-wrap" hx-select="#content-wrap" hx-swap="outerHTML show:no-scroll swap:0s" class="inline-block relative mr-5" title="{{ __('Message Wall') }}" href="{{ statusTray.messageWall.url }}" @click.debounce.500ms="read = true">
+    <a id="messageWall" x-data="{ read: {{ currentUser.messengerRead ? 'true' : 'false' }} }" hx-boost="true" hx-target="#content-wrap" hx-select="#content-wrap" hx-swap="outerHTML show:no-scroll swap:0s" class="text-blue-700 inline-block relative mr-5" title="{{ __('Message Wall') }}" href="{{ statusTray.messageWall.url }}" @click.debounce.500ms="read = true">
         {%if statusTray.messageWall.messages %}
-            <span class='badge  -mr-2 right-0' :class="read ? 'bg-{{ themeColour }}-400' : 'bg-red-500'">{{ statusTray.messageWall.messages }}</span>
+            <span class='text-blue-700 badge  -mr-2 right-0' :class="read ? 'bg-{{ themeColour }}-400' : 'bg-red-500'">{{ statusTray.messageWall.messages }}</span>
         {% endif %}
 
-        {{ icon('outline', 'message-wall', 'minorLinkIcon size-10 -my-1 fill-current text-white ' ~ (statusTray.messageWall.messages ? 'opacity-75' : 'opacity-25') ) }}
+        {{ icon('outline', 'message-wall', 'minorLinkIcon size-10 -my-1 fill-current text-blue-800 ' ~ (statusTray.messageWall.messages ? 'opacity-75' : 'opacity-25') ) }}
     </a>
 {% endif %}
 
@@ -27,7 +27,7 @@ Main Menu: Displays the top-level categories and active modules.
                 {{ statusTray.notifications.count > 0 ? statusTray.notifications.count : '' }}
             </span>
 
-            {{ icon('outline', 'notifications', 'notificationIcon size-8 fill-current text-white ' ~ (statusTray.notifications.count ? 'opacity-75' : 'opacity-25') ) }}
+            {{ icon('outline', 'notifications', 'notificationIcon size-8 fill-current text-blue-800 ' ~ (statusTray.notifications.count ? 'opacity-75' : 'opacity-25') ) }}
         </a>
 
         <script type="text/javascript">
